Converted old ObjectExtensions to ExpressionExtensions, which is all that's really needed here.

--- a/Mocks/PoorMan.Mocks.csproj
+++ b/Mocks/PoorMan.Mocks.csproj
@@ -46,7 +46,7 @@
     <Compile Include="BehaviorOptionsExtensions.cs" />
     <Compile Include="Extensions\IDictionaryExtensions.cs" />
     <Compile Include="Extensions\MemberInfoExtensions.cs" />
-    <Compile Include="Extensions\ObjectExtensions.cs" />
+    <Compile Include="Extensions\ExpressionExtensions.cs" />
     <Compile Include="Mock.cs" />
     <Compile Include="MockExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
