--- a/Mocks/PoorMan.Mocks.csproj
+++ b/Mocks/PoorMan.Mocks.csproj
@@ -8,6 +8,7 @@
     <Authors>Paul C</Authors>
     <Product>PoorMan's Mocks</Product>
     <Copyright>Copyright © 2020 Paul C</Copyright>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DocumentationFile>bin\Debug\PoorMan.Mocks.XML</DocumentationFile>
@@ -25,6 +26,10 @@
     <AdditionalFiles Include="..\stylecop.json">
       <Link>stylecop.json</Link>
     </AdditionalFiles>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers">
